testsuite/tests/messages/locations/no_locs.reference
Line _, characters _-_:
 | let _ = x;;
           ^
Error: Unbound value "x"
Line _, characters _-_:
 | let _ = 1 + "abc";;
               ^^^^^
Error: This expression has type "string" but an expression was expected of type
         "int"
Lines _-_, characters _-_:
 | ....(
 |     1
 |     +
 |     2
 |   )
Error: This expression has type "int" but an expression was expected of type
         "string"
Line _, characters _-_:
 | struct type t module M = struct type t end type a = M.t end;;
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Signature mismatch:
       Modules do not match:
         sig type t = M.t module M : sig type t = M.M.t end type a = M.t end
       is not included in
         sig type t type a = M.t end
       Type declarations do not match:
         type a = M/1.t
       is not included in
         type a = M/2.t
       The type "M/1.t" = "M/2.M.t" is not equal to the type "M/2.t"
       File "_none_", line _:
         Definition of module "M/2"
       Hint: The module "M" has been defined multiple times in this toplevel
         session. Some toplevel values still refer to old versions of this
         module. Did you try to redefine them?

